building out style
Co-authored-by: Mike <mvondrak@gmail.com>

--- a/packages/public-client/src/app/components/features/topic-section/topic-section.component.html
+++ b/packages/public-client/src/app/components/features/topic-section/topic-section.component.html
@@ -1,1 +1,16 @@
-<p>topic-section works!</p>
+<div class="section">
+  <div class="section-text">
+    <div class="section-label">
+      {{ sectionName }}
+    </div>
+    <div class="section-blurb">
+      {{ sectionNote }}
+    </div>
+    <div class="section-button">
+      {{ sectionButton }}
+    </div>
+  </div>
+  <div class="section-img">
+    <img [src]=sectionImgUrl>  
+  </div>
+</div>
