--- a/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.html
+++ b/packages/public-client/src/app/components/shared/mouse-facer/mouse-facer.component.html
@@ -7,6 +7,6 @@
     class="mouse-facer-content"
     appMouseTracker
   >
-    <ng-content></ng-content>
+    <!-- <ng-content></ng-content> -->
   </div>
 </div>
