--- a/packages/public-client/src/app/app.component.scss
+++ b/packages/public-client/src/app/app.component.scss
@@ -10,8 +10,8 @@
     main {
         flex: 1;
         // height: max-content;
-  }
+    }
   footer {
-    
+    background-color: utility.$dive-red;
   }
 }
