--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -1,47 +1,50 @@
 <header>
   <img src="../../../../assets/images/logoLg.png">
   <nav>
-    <ul>Home</ul>
-    <ul>Menu</ul>
-    <ul>Events</ul>
-    <ul>Bookings</ul>
-    <ul>ABOUT US</ul>
-    <ul>WORK WITH US</ul>
-    <ul>DIVE SHOP</ul>
+    <ul>
+      <li>Home</li>
+      <li>Menu</li>
+      <li>Events</li>
+      <li>Bookings</li>
+      <li>ABOUT US</li>
+      <li>WORK WITH US</li>
+      <li>DIVE SHOP</li>
+    </ul>
   </nav>
   <div class="boat-cam"><span>boat cam</span></div>
 </header>
 
 <main>
-  
-  <app-mouse-facer
-    imgSrc="../../../../assets/images/home/dive-inn-exterior.jpg"
-  >
-  
-    <div class="intro">
-        <p>Cleanest bar in Denver</p>
+
+  <div class="intro-section">
+    <app-mouse-facer imgSrc="../../../../assets/images/home/dive-inn-exterior.jpg"></app-mouse-facer>
+    <div class="intro-section-content">
+      <div class="intro">
+        <h1 class="title"><span>Dive Bar</span>&#8226;<span>Sports Bar</span>&#8226;<span>Games Bar</span></h1>
         <!-- <img src="../../../../assets/images/street-night.jpg"> -->
-    </div>
-    <div class="contact">
+      </div>
+      <div class="contact">
         <div class="address">
-            <p>ADDRESS</p>
-            <p>{{ footerAddress }}</p>
+          <p>ADDRESS</p>
+          <p>{{ footerAddress }}</p>
         </div>
         <div class="hours">
-            <p>HOURS</p>
-            <div *ngFor="let days of contactHours">{{ days }}</div>
+          <p>HOURS</p>
+          <div *ngFor="let days of contactHours">{{ days }}</div>
         </div>
         <div class="phone">
-            <p>PHONE</p>
-            <p>{{ footerPhone }}</p>
+          <p>PHONE</p>
+          <p>{{ footerPhone }}</p>
         </div>
+      </div>
+      <app-topic-section sectionName="MENU"></app-topic-section>
+      <app-topic-section></app-topic-section>
     </div>
-    <app-topic-section
-    ></app-topic-section>
-    <app-topic-section
-    ></app-topic-section>
+  </div>
 
-  </app-mouse-facer>
+  <div class="food-section">
+    <h2>Food</h2>
+  </div>
 </main>
 
 
@@ -55,9 +58,11 @@
     <img src="/assets/images/social/twitter.png" />
   </div> -->
   <div class="navigation">
-    <ul>Contact Us</ul>
-    <ul>News</ul>
-    <ul>PADI Club</ul>
-    <ul>Sightings</ul>
+    <ul>
+      <li>Contact Us</li>
+      <li>News</li>
+      <li>PADI Club</li>
+      <li>Sightings</li>
+    </ul>
   </div>
 </footer>
