--- a/packages/public-client/src/styles.scss
+++ b/packages/public-client/src/styles.scss
@@ -11,6 +11,8 @@ html {
 html, body {
   margin: 0;
   padding: 0;
+  background-color: shared-imports.$dive-black;
+  color: shared-imports.$dive-white;
 }
 
 button {
