--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -38,7 +38,7 @@
         </div>
       </div>
       <app-topic-section sectionName="MENU"></app-topic-section>
-      <app-topic-section></app-topic-section>
+      <app-topic-section sectionName="BOOKINGS"></app-topic-section>
     </div>
   </div>
 
