--- a/packages/public-client/src/app/components/features/topic-section/topic-section.component.html
+++ b/packages/public-client/src/app/components/features/topic-section/topic-section.component.html
@@ -1,4 +1,4 @@
-<div class="section">
+<div class="section" [ngClass]="{'reverse': orientation == 'right'}">
   <div class="section-text">
     <div class="section-label">
       {{ sectionName }}
@@ -7,7 +7,9 @@
       {{ sectionNote }}
     </div>
     <div class="section-button">
-      {{ sectionButton }}
+      <button>
+        {{ sectionButton }}
+      </button>
     </div>
   </div>
   <div class="section-img">
