--- a/packages/public-client/src/app/components/features/topic-section/topic-section.component.scss
+++ b/packages/public-client/src/app/components/features/topic-section/topic-section.component.scss
@@ -1,20 +1,35 @@
+@use '../../scss/utility';
+
 .section {
   display: flex;
   justify-content: space-between;
-  padding: 2vw 7vw;
+  //padding: 0 7vw;
+
+  &.reverse {
+    flex-direction: row-reverse;
+  }
 
   .section-text {
+    z-index: 1;
     display: flex;
-    padding: 8vw 0;
+    padding: 8vw;
     justify-content: space-around;
     flex-direction: column;
+    background-image: linear-gradient(90deg, utility.$dive-black 0%, utility.$dive-black 70%, transparent 100%);
   }
   
   .section-img {
-    width: 40vw;
+    position: absolute;
+    //width: 100vw;
 
     img {
       width: 100%;
     }
+  }
+
+  button {
+    width: 150px;
+    height: 30px;
+    border-radius: 20px;
   }
 }
