--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -25,7 +25,8 @@ $headerColor: utility.$dive-gray-dk2;
       padding: 1rem;
       $t1: 20%;
       $t2: 44%;
-      background-image: linear-gradient(163deg, utility.$dive-black 0%, utility.$dive-black $t1, $headerColor ($t1 + 0.5%), $headerColor $t2, utility.$dive-black $t2 + 0.3%, utility.$dive-black $t2 + 0.8%, transparent $t2 + 1.2%);
+      //background-image: linear-gradient(163deg, utility.$dive-black 0%, utility.$dive-black $t1, $headerColor ($t1 + 0.5%), $headerColor $t2, utility.$dive-black $t2 + 0.3%, utility.$dive-black $t2 + 0.8%, transparent $t2 + 1.2%);
+      background-image: linear-gradient(163deg, utility.$dive-black 0%, utility.$dive-black $t1, $headerColor ($t1 + 0.5%), $headerColor $t2, transparent $t2 + 1.2%);
       border-bottom-right-radius: 50%;
 
       transition: top 0.65s ease;
@@ -42,6 +43,7 @@ $headerColor: utility.$dive-gray-dk2;
       font-size: 1.25vw;
       background-color: $headerColor; //rgba(0,0,0,0.75);
       color: utility.$dive-white;
+      font-family: 'Righteous', cursive;
       
       ul {
         display: flex;
@@ -135,7 +137,7 @@ $headerColor: utility.$dive-gray-dk2;
             //   -$textOutlineWidth (-$textOutlineWidth) 0px $textOutlineColor;
             &:after {
               position: absolute;
-              content: "Local Events Live Sports Bar Games";
+              content: "Local Events Live Sports and Games";
               -webkit-text-stroke: 0.2em $textOutline2Color;
               top: 0; right: 0rem;
               z-index: -1;
@@ -149,13 +151,17 @@ $headerColor: utility.$dive-gray-dk2;
 
         .contact-container {
           z-index: 1;
-          width: 100%;   
-          padding: 1rem 1rem 1rem;
+          // display: flex;
+          // align-items: center;
+          // justify-content: space-around;
+          width: 100%;
+          height: 16vw;
+          padding: 2vw 0rem 18vw;
           @include utility.media-breakpoint-gte(sm) {
-            padding: 1rem 10vw 2rem;
+            padding: 2vw 0vw 16.5vw;
           }
           background-color: utility.$dive-red;
-          background-image: linear-gradient(0deg, utility.$dive-red 0%, utility.$dive-red 98%, utility.$dive-black 100%);
+          background-image: linear-gradient(0deg, utility.$dive-red 0%, utility.$dive-red 99%, utility.$dive-black 100%);
 
           .contact-content {
             $headerFontSize: 2.2vw;
@@ -228,36 +234,76 @@ $headerColor: utility.$dive-gray-dk2;
           } // end contact-content          
         } // end contact
 
+        $waveSize: 4vw;
         .waves-separator {
           position: relative;
-          z-index: 0;
+          z-index: 1;
           display: flex;
+          height: $waveSize;
           width: 100%;
-          margin-top: -2rem;
-          > div {
-            position: relative;
-            flex: 1;
-            min-height: 4rem;
-            border-radius: 0 0 50% 50%;
-            background-color: utility.$dive-red;
-          }
+          margin-top: -($waveSize - 0.01vw);
+          background-image: url('/assets/images/wave.svg');
+          // > div {
+          //   position: relative;
+          //   flex: 1;
+          //   min-height: 4rem;
+          //   border-radius: 0 0 50% 50%;
+          //   background-color: utility.$dive-red;
+          // }
         }
 
         .blurb {
+          position: relative;
           display: flex;
           flex-direction: column;
           align-items: center;
-          padding: 2rem;
+          padding: 2vw 0.5vw;
           text-align: center;
-          @include utility.media-breakpoint-gte(md) {
-            padding: 4rem;
+          @include utility.media-breakpoint-gte(sm) {
+            padding: 4vw 1vw;
           }
-          img, span {
-            display: block;            
-          }
+          svg { 
+            display: block;
+            width: 5vw;
+            margin-top: 2vw;
+            @include utility.media-breakpoint-gte(sm) {
+              width: 4.5vw;
+            }            
+            g path {              
+              fill: utility.$dive-red;
+            }            
+          }  
+          .diver {
+            z-index: -1;
+            position: absolute;
+            top: 0; bottom: 0; left: 0; right: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            //top: 10vw;
+            //left: 10vw;
+            svg {
+              width: 60vw;
+              g path {
+                fill: utility.$dive-gray-dk3;
+              }
+            }
+          }        
+          // img, span {
+          //   display: block;
+          //   width: 5vw;
+          //   margin-top: 2vw;
+          //   @include utility.media-breakpoint-gte(sm) {
+          //     width: 4.5vw;
+          //   }            
+          // }
           p {
-            max-width: 50%;
-            font-size: 1.5rem;
+            max-width: 80vw;
+            font-size: 3vw;
+            @include utility.media-breakpoint-gte(sm) {
+              max-width: 60vw;
+              font-size: 2.75vw;
+            }
             line-height: 1.75;
           }
         }
