--- a/packages/shared/scss/_colors.scss
+++ b/packages/shared/scss/_colors.scss
@@ -1,10 +1,10 @@
 $dive-white: #ebebeb;
 $dive-red: #de2726;
 $dive-red-dk: #5a1716;
-$dive-black: #151212;
+$dive-black: #151212; // rgb(21, 18, 18)
 $dive-gray-lt: #cbb;
 $dive-gray-md: #988;
 $dive-gray-dk: #544;
 $dive-gray-dk2: #403535;
-
+$dive-gray-dk3: #302525;
 $dive-yellow: #ca0;
