--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -51,8 +51,9 @@
         <ng-container *ngTemplateOutlet="AnchorSvg"></ng-container>
         <p>
           <!-- unique local events? -->
-          Denver's favorite dive bar since 2012, with specials every day, two patios & exclusive local events. Grab your friends and
-          <span>Dive Inn</span>
+          <!-- Denver's favorite dive bar since... -->
+          Denver's <span>#1 neighborhood bar</span> since 2012, with specials <span>every day</span>, two patios & exclusive local events. Grab your friends and
+          <span class="titleFont">Dive Inn</span>
         </p>
         <div class="diver">
           <ng-container *ngTemplateOutlet="DiverSvg"></ng-container>
