--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -52,7 +52,7 @@
         <p>
           <!-- unique local events? -->
           <!-- Denver's favorite dive bar since... -->
-          Denver's <span>#1 neighborhood bar</span> since 2012, with specials <span>every day</span>, two patios & exclusive local events. Grab your friends and
+          Denver's <span>#1 neighborhood bar</span> since 2012, with <span>specials</span> every day, three patios & exclusive <span>events</span>. Grab your friends and
           <span class="titleFont">Dive Inn</span>
         </p>
         <div class="diver">
