--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -20,16 +20,26 @@ $headerColor: utility.$dive-gray-dk3;
       z-index: 2;
       width: 15vw;
       position: absolute;
-      top: -11vw;
+      top: -22vw;
       left: 0rem;
-      padding: 1rem;
+      padding: 1vw;
       $t1: 20%;
-      $t2: 44%;
+      $t2: 40%;
       //background-image: linear-gradient(163deg, utility.$dive-black 0%, utility.$dive-black $t1, $headerColor ($t1 + 0.5%), $headerColor $t2, utility.$dive-black $t2 + 0.3%, utility.$dive-black $t2 + 0.8%, transparent $t2 + 1.2%);
       background-image: linear-gradient(163deg, utility.$dive-black 0%, utility.$dive-black $t1, $headerColor ($t1 + 0.5%), $headerColor $t2, transparent $t2 + 1.2%);
       border-bottom-right-radius: 50%;
 
       transition: top 0.65s ease;
+
+      @media screen and (max-width: 1500px){
+        width: 18vw;
+      }
+      @media screen and (max-width: 900px){
+        width: 22vw;
+      }
+      @media screen and (max-width: 500px){
+        width: 28vw;
+      }
 
       &.showLogo {
         top: 0rem;
@@ -306,7 +316,12 @@ $headerColor: utility.$dive-gray-dk3;
             line-height: 1.75;
 
             span {
+              color: utility.$dive-yellow;
+              //text-decoration: underline;
+              //font-style: italic;
+
               &.titleFont {
+                color: utility.$dive-black;
                 display: block;
                 font-family: 'Bevan', serif;
                 @include utility.text-double-outline('Dive Inn');
