--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -30,15 +30,21 @@
       <div class="contact-container">
         <div class="contact-content">
           <div class="address">
-            <h2>Address</h2>
+            <!-- <img src="assets/images/Map-Marker.svg"> -->
+            <ng-container *ngTemplateOutlet="MapMarkerSvg"></ng-container>
+            <!-- <h2>Address</h2> -->
             <p *ngFor="let address of footerAddress">{{ address }}</p>
           </div>
           <div class="hours">
-            <h2>Hours</h2>
+            <!-- <img src="assets/images/Clock.svg"> -->
+            <ng-container *ngTemplateOutlet="ClockSvg"></ng-container>
+            <!-- <h2>Hours</h2> -->
             <p *ngFor="let days of contactHours">{{ days }}</p>
           </div>
           <div class="phone">
-            <h2>Contact</h2>
+            <!-- <img src="assets/images/Www-Globe.svg"> -->
+            <ng-container *ngTemplateOutlet="WwwGlobeSvg"></ng-container>
+            <!-- <h2>Contact</h2> -->
             <p>{{ footerPhone }}</p><!-- TODO: add tel link to number -->
             <p>contact@diveinndenver.com</p>
           </div>
@@ -52,7 +58,10 @@
         <p>
           <!-- unique local events? -->
           <!-- Denver's favorite dive bar since... -->
-          Denver's <span>#1 neighborhood bar</span> since 2012, with specials <span>every day</span>, two patios & exclusive local events. Grab your friends and
+          <!-- Denver's <span>#1 neighborhood bar</span> since 2012, with specials <span>every day</span>, three patios & <span>exclusive events</span>. -->
+          Denver's <span>#1 neighborhood bar</span> since 2012, with <span>specials</span> every day, all your favorite <span>games</span>, private <span>rooms</span> & exclusive <span>events</span>.
+        </p>
+        <p>Grab your friends and...
           <span class="titleFont">Dive Inn</span>
         </p>
         <div class="diver">
@@ -106,4 +115,40 @@
     </g>
 </svg>
 
+</ng-template>
+
+<ng-template #MapMarkerSvg>
+  <svg width="100%" height="100%" viewBox="0 0 98 168" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+    <rect id="Artboard4" x="0" y="0" width="97.708" height="167.577" style="fill:none;"/>
+    <clipPath id="_clip1">
+        <rect x="0" y="0" width="97.708" height="167.577"/>
+    </clipPath>
+    <g clip-path="url(#_clip1)">
+        <g>
+            <path d="M49.059,0.178C76.022,0.178 97.913,22.069 97.913,49.032C97.913,75.995 76.022,97.886 49.059,97.886C22.095,97.886 0.205,75.995 0.205,49.032C0.205,22.069 22.095,0.178 49.059,0.178ZM49.059,24.605C62.54,24.605 73.486,35.55 73.486,49.032C73.486,62.514 62.54,73.459 49.059,73.459C35.577,73.459 24.632,62.514 24.632,49.032C24.632,35.55 35.577,24.605 49.059,24.605Z"/>
+            <path d="M49.059,167.755L3.269,66.014C34.334,78.769 64.895,79.568 94.848,66.014L49.059,167.755Z"/>
+        </g>
+    </g>
+</svg>
+</ng-template>
+
+<ng-template #ClockSvg>
+  <svg width="100%" height="100%" viewBox="0 0 163 163" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+    <g>
+        <g>
+            <path d="M81.59,0.135C126.466,0.135 162.9,36.569 162.9,81.445C162.9,126.321 126.466,162.755 81.59,162.755C36.714,162.755 0.28,126.321 0.28,81.445C0.28,36.569 36.714,0.135 81.59,0.135ZM81.59,4.567C124.021,4.567 158.469,39.015 158.469,81.445C158.469,123.876 124.021,158.324 81.59,158.324C39.16,158.324 4.712,123.876 4.712,81.445C4.712,39.015 39.16,4.567 81.59,4.567Z"/>
+            <path d="M83.931,0.169C82.371,0.124 80.809,0.124 79.249,0.169L78.696,12.392C68.531,12.819 58.586,15.483 49.57,20.197L42.98,9.887C41.606,10.629 40.253,11.409 38.924,12.229L44.557,23.091C35.967,28.542 28.687,35.823 23.236,44.412L12.374,38.78C11.554,40.109 10.774,41.461 10.032,42.835L20.342,49.425C15.628,58.441 12.963,68.386 12.537,78.551L0.314,79.104C0.269,80.664 0.269,82.226 0.314,83.786L12.537,84.339C12.963,94.504 15.628,104.449 20.342,113.465L10.032,120.056C10.774,121.43 11.554,122.782 12.374,124.111L23.236,118.478C28.687,127.068 35.967,134.348 44.557,139.799L38.924,150.662C40.253,151.481 41.606,152.262 42.98,153.003L49.57,142.694C58.586,147.407 68.531,150.072 78.696,150.498L79.249,162.721C80.809,162.766 82.371,162.766 83.931,162.721L84.484,150.498C94.649,150.072 104.594,147.407 113.61,142.694L120.201,153.003C121.574,152.262 122.927,151.481 124.256,150.662L118.623,139.799C127.213,134.348 134.493,127.068 139.944,118.478L150.807,124.111C151.626,122.782 152.406,121.43 153.148,120.056L142.839,113.465C147.552,104.449 150.217,94.504 150.643,84.339L162.866,83.786C162.911,82.226 162.911,80.664 162.866,79.104L150.643,78.551C150.217,68.386 147.552,58.441 142.839,49.425L153.148,42.835C152.406,41.461 151.626,40.109 150.807,38.78L139.944,44.412C134.493,35.823 127.213,28.542 118.623,23.091L124.256,12.229C122.927,11.409 121.574,10.629 120.201,9.887L113.61,20.197C104.594,15.483 94.649,12.819 84.484,12.392L83.931,0.169ZM85.286,79.666L85.328,79.624L54.147,48.443L50.108,52.481L80.851,83.223L81.727,83.224L138.535,83.224L138.535,79.666L85.286,79.666Z" />
+        </g>
+    </g>
+</svg>
+</ng-template>
+
+<ng-template #WwwGlobeSvg>
+  <svg width="100%" height="100%" viewBox="0 0 163 163" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
+    <g>
+        <g>
+            <path d="M86.231,124.625C97.961,124.594 109.67,125.488 121.352,127.309L121.329,127.423C120.326,132.3 119.17,137.145 117.864,141.949C116.539,146.827 115.058,151.663 113.439,156.452L113.391,156.591C104.96,160.118 95.813,162.266 86.231,162.755L86.231,124.625ZM77.823,124.805L77.823,162.755C66.586,162.182 55.948,159.326 46.368,154.646C43.766,146.277 41.645,137.895 40.003,129.501L40.04,129.494C46.273,128.202 52.556,127.152 58.873,126.366C65.113,125.59 71.384,125.071 77.667,124.811L77.823,124.805ZM129.371,128.705C134.754,129.74 140.133,130.973 145.508,132.404C139.366,140.042 131.875,146.551 123.4,151.566L123.445,151.42C124.625,147.647 125.718,143.846 126.715,140.02C127.687,136.293 128.567,132.543 129.357,128.773L129.371,128.705ZM32.056,131.291C33.232,137.133 34.641,142.965 36.28,148.787C30.327,144.733 24.938,139.91 20.254,134.459C24.193,133.3 28.129,132.244 32.056,131.291ZM27.562,85.649C27.516,98.277 28.53,110.86 30.606,123.394C25.432,124.669 20.251,126.118 15.063,127.741C6.698,115.67 1.511,101.235 0.717,85.649L27.562,85.649ZM163.337,85.649C162.591,100.26 157.987,113.859 150.524,125.448C143.993,123.574 137.45,121.991 130.897,120.701C132.905,109.055 133.998,97.369 134.172,85.649L163.337,85.649ZM35.785,85.649L77.823,85.649L77.823,116.589L77.67,116.595C71.194,116.867 64.731,117.411 58.3,118.225C51.716,119.058 45.17,120.173 38.677,121.545L38.594,121.562C36.689,109.613 35.754,97.641 35.785,85.649ZM125.945,85.649L86.231,85.649L86.231,116.402C98.481,116.357 110.689,117.31 122.852,119.263C124.732,108.078 125.762,96.874 125.945,85.649ZM15.568,34.428C21.239,36.089 26.9,37.541 32.56,38.785C29.876,51.65 28.272,64.468 27.75,77.241L0.717,77.241C1.528,61.341 6.909,46.639 15.568,34.428ZM40.463,40.389C52.962,42.711 65.416,44.01 77.823,44.287L77.823,77.241L35.965,77.241C36.459,64.982 37.959,52.699 40.463,40.389ZM122.203,40.881C124.422,53.024 125.663,65.142 125.923,77.241L86.231,77.241L86.231,44.317C98.263,44.137 110.253,42.992 122.203,40.881ZM148.623,34.622C157.205,46.801 162.531,61.43 163.337,77.241L134.142,77.241C133.861,64.654 132.528,52.02 130.142,39.336C136.312,38.023 142.472,36.452 148.623,34.622ZM86.231,0.135C95.756,0.621 104.852,2.747 113.237,6.235C116.211,15.127 118.665,24.006 120.597,32.87C109.162,34.831 97.706,35.904 86.231,36.089L86.231,0.135ZM77.823,0.135L77.823,36.068C65.976,35.814 54.105,34.618 42.209,32.483C44.256,23.887 46.792,15.278 49.816,6.659C58.477,2.919 67.918,0.64 77.823,0.135ZM123.133,11.167C130.709,15.611 137.503,21.244 143.26,27.81L143.248,27.813C138.384,29.149 133.481,30.335 128.544,31.363L128.506,31.371C127.009,24.648 125.219,17.913 123.133,11.167ZM39.731,11.879C37.669,18.243 35.869,24.595 34.332,30.932C29.864,29.975 25.394,28.886 20.92,27.665C26.346,21.506 32.687,16.172 39.731,11.879Z"/>
+        </g>
+    </g>
+</svg>
 </ng-template>
