--- a/packages/public-client/src/app/components/pages/home/home.component.html
+++ b/packages/public-client/src/app/components/pages/home/home.component.html
@@ -1,102 +1,103 @@
-<div>
 <header>
-  <img [ngClass]="{'showLogo': showLogo}" src="../../../../assets/images/logoLg.png">
-  <nav>
-    <ul>
-      <li *ngFor="let item of navMenuItems">{{item}}</li>
-    </ul>
-  </nav>
-  <div class="boat-cam"><span>boat cam</span></div>
+<img [ngClass]="{'showLogo': showLogo}" src="../../../../assets/images/logoLg.png">
+<nav>
+  <ul>
+    <li *ngFor="let item of navMenuItems">{{item}}</li>
+  </ul>
+</nav>
+<div class="boat-cam"><span>boat cam</span></div>
 </header>
 
 <main>
-  <div class="intro-section">
-    
-    <app-mouse-facer imgSrc="../../../../assets/images/home/dive-inn-exterior.jpg"></app-mouse-facer>
-    
-    <div class="intro-section-content">
-      <div class="intro">
-        <h1 class="title">
-          <span>Local Events</span><br>
-          <span>Live Sports</span><br>
-          <span>Table Games</span><br>
-          <!-- &#8226; -->
-          <!-- &#8226; -->
-        </h1>
-      </div>
-      <!-- <div class="contact-rounded-top">
-        <div></div><div></div><div></div>
-      </div> -->
-      <div class="contact-container">
-        <div class="contact-content">
-          <div class="address">
-            <!-- <img src="assets/images/Map-Marker.svg"> -->
-            <ng-container *ngTemplateOutlet="MapMarkerSvg"></ng-container>
-            <!-- <h2>Address</h2> -->
-            <p *ngFor="let address of footerAddress">{{ address }}</p>
-          </div>
-          <div class="hours">
-            <!-- <img src="assets/images/Clock.svg"> -->
-            <ng-container *ngTemplateOutlet="ClockSvg"></ng-container>
-            <!-- <h2>Hours</h2> -->
-            <p *ngFor="let days of contactHours">{{ days }}</p>
-          </div>
-          <div class="phone">
-            <!-- <img src="assets/images/Www-Globe.svg"> -->
-            <ng-container *ngTemplateOutlet="AtSignSvg"></ng-container>
-            <!-- <h2>Contact</h2> -->
-            <p>{{ footerPhone }}</p><!-- TODO: add tel link to number -->
-            <p>contact@diveinndenver</p>
-          </div>
-        </div>        
-      </div>
-      <div class="waves-separator">
-        <div *ngFor="let wave of numWaves"></div>
-      </div>
-      <div class="blurb">
-        <ng-container *ngTemplateOutlet="AnchorSvg"></ng-container>
-        <p>
-          <!-- unique local events? -->
-          <!-- Denver's favorite dive bar since... -->
-          <!-- Denver's <span>#1 neighborhood bar</span> since 2012, with specials <span>every day</span>, three patios & <span>exclusive events</span>. -->
-          Denver's <span>#1 neighborhood bar</span> since 2012, with <span>specials</span> every day, all your favorite <span>games</span>,  exclusive <span>events</span> & private <span>rooms</span>.
-        </p>
-        <p>Grab your <span>friends</span> and...
-          <span class="titleFont">Dive Inn</span>
-        </p>
-        <div class="diver">
-          <ng-container *ngTemplateOutlet="DiverSvg"></ng-container>
+<div class="intro-section">
+  
+  <app-mouse-facer imgSrc="../../../../assets/images/home/dive-inn-exterior.jpg"></app-mouse-facer>
+  
+  <div class="intro-section-content">
+    <div class="intro">
+      <h1 class="title">
+        <span>Local Events</span><br>
+        <span>Live Sports</span><br>
+        <span>Table Games</span><br>
+        <!-- &#8226; -->
+        <!-- &#8226; -->
+      </h1>
+    </div>
+    <!-- <div class="contact-rounded-top">
+      <div></div><div></div><div></div>
+    </div> -->
+    <div class="contact-container">
+      <div class="contact-content">
+        <div class="address">
+          <!-- <img src="assets/images/Map-Marker.svg"> -->
+          <ng-container *ngTemplateOutlet="MapMarkerSvg"></ng-container>
+          <!-- <h2>Address</h2> -->
+          <p *ngFor="let address of footerAddress">{{ address }}</p>
         </div>
-        <ng-container *ngTemplateOutlet="AnchorSvg"></ng-container>
+        <div class="hours">
+          <!-- <img src="assets/images/Clock.svg"> -->
+          <ng-container *ngTemplateOutlet="ClockSvg"></ng-container>
+          <!-- <h2>Hours</h2> -->
+          <p *ngFor="let days of contactHours">{{ days }}</p>
+        </div>
+        <div class="phone">
+          <!-- <img src="assets/images/Www-Globe.svg"> -->
+          <ng-container *ngTemplateOutlet="AtSignSvg"></ng-container>
+          <!-- <h2>Contact</h2> -->
+          <p>{{ footerPhone }}</p><!-- TODO: add tel link to number -->
+          <p>contact@diveinndenver</p>
+        </div>
+      </div>        
+    </div>
+    <div class="waves-separator">
+      <div *ngFor="let wave of numWaves"></div>
+    </div>
+    <div class="blurb">
+      <ng-container *ngTemplateOutlet="AnchorSvg"></ng-container>
+      <p>
+        <!-- unique local events? -->
+        <!-- Denver's favorite dive bar since... -->
+        <!-- Denver's <span>#1 neighborhood bar</span> since 2012, with specials <span>every day</span>, three patios & <span>exclusive events</span>. -->
+        Denver's <span>#1 neighborhood bar</span> since 2012, with <span>specials</span> every day, all your favorite <span>games</span>,  exclusive <span>events</span> & private <span>rooms</span>.
+      </p>
+      <p>Grab your <span>friends</span> and...
+        <span class="titleFont">Dive Inn</span>
+      </p>
+      <div class="diver">
+        <ng-container *ngTemplateOutlet="DiverSvg"></ng-container>
       </div>
+      <ng-container *ngTemplateOutlet="AnchorSvg"></ng-container>
     </div>
   </div>
+</div>
 
+<div class="sections-container">
   <app-topic-section sectionName="MENU"></app-topic-section>
+  <div class="divider"></div>
   <app-topic-section sectionName="BOOKINGS"></app-topic-section>
-  
+</div>
+
 </main>
 
 
 <footer>
-  <p>{{footerAddress}} | {{footerPhone}}</p>
-  <!-- <div class="social-links-container">
-    <img src="/assets/images/social/facebook.png" />
-    <img src="/assets/images/social/instagram.png" />
-    <img src="/assets/images/social/yelp.png" />
-    <img src="/assets/images/social/trip-advisor.png" />
-    <img src="/assets/images/social/twitter.png" />
-  </div> -->
-  <div class="navigation">
-    <ul>
-      <li>Contact Us</li>
-      <li>News</li>
-      <li>PADI Club</li>
-      <li>Sightings</li>
-    </ul>
-  </div>
-</footer>
+<p>{{footerAddress}} | {{footerPhone}}</p>
+<!-- <div class="social-links-container">
+  <img src="/assets/images/social/facebook.png" />
+  <img src="/assets/images/social/instagram.png" />
+  <img src="/assets/images/social/yelp.png" />
+  <img src="/assets/images/social/trip-advisor.png" />
+  <img src="/assets/images/social/twitter.png" />
+</div> -->
+<div class="navigation">
+  <ul>
+    <li>Contact Us</li>
+    <li>News</li>
+    <li>PADI Club</li>
+    <li>Sightings</li>
+  </ul>
 </div>
+</footer>
 
 
 <!-- SVGs -->
